--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,9 @@ site_name: Introduction to running R, Python, and Julia in HPC
 
 nav:
     - Home: index.md
+    - Python:
+    - Julia:
+    - R:
 
 theme: readthedocs
   greetings: Welcome to UPPMAX userguide
