--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,11 +2,9 @@ site_name: Introduction to running R, Python, and Julia in HPC
 
 nav:
     - Home: index.md
-
+    - Python: python-intro.md
 
 theme: readthedocs
-  greetings: Welcome to UPPMAX userguide
-
 
 
 markdown_extensions:
