--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,9 @@ site_name: Introduction to running R, Python, and Julia in HPC
 
 nav:
     - Home: index.md
-    - Python: python-intro.md
+    - Python: 
+      - Intro: python-intro.md
+      - Load and run: load_run.md
 
 theme: readthedocs
 
