--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,8 @@ nav:
       - Load and run: r_load_run.md
 
 theme: readthedocs
-
+  features:
+    - content.tabs.link
 
 markdown_extensions:
   - toc:
