--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ nav:
       - Load and run: r_load_run.md
 
 theme: 
-    name: readthedocs
+#    name: readthedocs
     features:
        - content.tabs.link
        
