--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,8 +36,9 @@ markdown_extensions:
   - footnotes
   - pymdownx.details
   - pymdownx.tabbed:
-      alternate_style: true
-  - pymdownx.highlight:
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower  - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
