--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,3 +49,4 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+  - markdown_fenced_code_tabs
