--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/setup-python@v2
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -r docs/requirements.txt
       - name: Sphinx build
         run: |
           sphinx-build docs _build
