--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -7,6 +7,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+      - name: Install OS package dependencies
+        run: |
+          sudo apt update
+          sudo apt install plantuml
+          #sudo apt install npm
+          #npm install mermaid
+          npm install -g @mermaid-js/mermaid-cli
+          #npm install markmap
       - name: Install dependencies
         run: |
           pip install -r docs/requirements.txt
