--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+      # Install plantuml
       - name: Install OS package dependencies
         run: |
           sudo apt update
