--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -21,7 +21,7 @@ jobs:
           pip install -r docs/requirements.txt
       - name: Sphinx build
         run: |
-          sphinx-build docs _build
+          sphinx-build --nitpicky docs _build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
