--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -21,4 +21,26 @@ matrix:
   sources:
   - '**/*.md'
   default_encoding: utf-8
+- name: rst
+  dictionary:
+    wordlists:
+    - .wordlist.txt
+    output: wordlist.dic
+    encoding: utf-8
+  pipeline:
+  - pyspelling.filters.markdown:
+      markdown_extensions:
+      - markdown.extensions.extra:
+  - pyspelling.filters.html:
+      comments: false
+      attributes:
+      - alt
+      ignores:
+      - ':matches(code, pre)'
+      - 'code'
+      - 'pre'
+      - 'blockquote'
+  sources:
+  - '**/*.rst'
+  default_encoding: utf-8
 
