--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -19,9 +19,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r docs/requirements.txt
-      - name: Sphinx build
+      - name: Sphinx build in nitpicky mode
         run: |
-          sphinx-build --nitpicky docs _build
+          sphinx-build -n docs _build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
