--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
 # Defining the exact version will make sure things don't break
-#python==3.11.X
+python==3.11.8
 sphinx>=7.2.6
 sphinx_rtd_theme>=2.0.0
 readthedocs-sphinx-search>=0.3.2
