--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -20,10 +20,8 @@ jobs:
       - name: Install dependencies
         run: pip install -r docs/requirements.txt
 
-      - name: Sphinx build in non-nitpicky mode, if fails, show the error log
-        run: sphinx-build docs _build || /tmp/sphinx-err-kxuvbc_i.log
-      #- name: Sphinx builds in nitpicky mode
-      #  run: sphinx-build -n docs _build
+      - name: Sphinx builds in nitpicky mode
+        run: sphinx-build -n docs _build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
