Only spellcheck docs folder

--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -19,7 +19,7 @@ matrix:
       - 'pre'
       - 'blockquote'
   sources:
-  - '**/*.md'
+  - 'docs/**/*.md'
   default_encoding: utf-8
 - name: rst
   dictionary:
@@ -41,6 +41,6 @@ matrix:
       - 'pre'
       - 'blockquote'
   sources:
-  - '**/*.rst'
+  - 'docs/**/*.rst'
   default_encoding: utf-8
 
