--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,8 +1,12 @@
 name: pages
+
+# Only run this on the main branch, or with Pull Requests
 on:
   push:
     branches:
       - main
+  pull_request:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
