--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -26,6 +26,7 @@ jobs:
         run: |
           rm -rf docs/julia/not_used
           rm -rf docs/python/not_used
+          rm -rf docs/matlab/not_used
           rm -rf docs/not_used
 
       - name: Sphinx builds in nitpicky mode
