--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Remove folders that need not to be checked
+        run: rm -rf /docs/not_used/
+        run: rm -rf /docs/python/not_used/
+        run: rm -rf /docs/julia/not_used/
+        run: rm -rf /docs/R/not_used/
+        run: rm -rf /docs/matlab/not_used/
+
       - name: Link Checker
         id: lychee
         uses: lycheeverse/lychee-action@v1.10.0
