--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -14,11 +14,11 @@ jobs:
 
       - name: Remove folders that need not to be checked
         run: |
-          rm -rf /docs/not_used/
-          rm -rf /docs/python/not_used/
-          rm -rf /docs/julia/not_used/
-          rm -rf /docs/R/not_used/
-          rm -rf /docs/matlab/not_used/
+          rm -rf docs/not_used/
+          rm -rf docs/python/not_used/
+          rm -rf docs/julia/not_used/
+          rm -rf docs/R/not_used/
+          rm -rf docs/matlab/not_used/
 
       - name: Link Checker
         id: lychee
