.lycheeignore ignore server adresses

--- a/.lycheeignore
+++ b/.lycheeignore
@@ -1,1 +1,9 @@
 docs.uppmax.uu.se
+umeauniversity.sharepoint.com
+b-cn1403.hpc2n.umu.se
+b-cn1520.hpc2n.umu.se
+file://
+localhost
+127.0.0.1
+r486
+bianca.uppmax.uu.se
