--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -20,12 +20,19 @@ jobs:
           rm -rf docs/R/not_used/
           rm -rf docs/matlab/not_used/
 
+      - name: Restore lychee cache
+        uses: actions/cache@v4
+        with:
+          path: .lycheecache
+          key: cache-lychee-${{ github.sha }}
+          restore-keys: cache-lychee-
+
       - name: Link Checker
         id: lychee
         uses: lycheeverse/lychee-action@v1.10.0
         with:
-          # Check all markdown, html and reStructuredText files in repo (default)
-          args: --base docs/ --verbose --no-progress './**/*.rst'
+          # Check all reStructuredText files in repo 
+          args: --base docs/ --cache --max-cache-age 1d --verbose --no-progress './**/*.rst'
 
       - name: Create Issue From File
         if: env.lychee_exit_code != 0
