--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -1,30 +1,43 @@
-name: Check links
+name: Links
 
-# Only run this on the main branch, or with Pull Requests
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  repository_dispatch:
+  workflow_dispatch:
+  schedule:
+    - cron: "00 19 * * *"
 
 jobs:
-  check_links:
-
+  linkChecker:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Remove folders that need not to be checked
-        run: rm -rf /docs/python/not_used/
+        run: |
+          rm -rf docs/not_used/
+          rm -rf docs/python/not_used/
+          rm -rf docs/julia/not_used/
+          rm -rf docs/R/not_used/
+          rm -rf docs/matlab/not_used/
 
-      - uses: gaurav-nelson/github-action-markdown-link-check@v1
+      - name: Restore lychee cache
+        uses: actions/cache@v4
+        with:
+          path: .lycheecache
+          key: cache-lychee-${{ github.sha }}
+          restore-keys: cache-lychee-
 
+      - name: Link Checker
+        id: lychee
+        uses: lycheeverse/lychee-action@v1.10.0
+        with:
+          # Check all reStructuredText files in repo 
+          args: --base docs/ --max-redirects 10 --user-agent "curl/8.4.0" --verbose --no-progress './**/*.rst'
 
-      # Cannot deal w	ith emails :-/
-      #- uses: lycheeverse/lychee-action@v1.2.0
-      #  with:
-      #    #args: --verbose --exclude-mail './**/*.md' './**/*.html'
-      #    fail: true
+      - name: Create Issue From File
+        if: env.lychee_exit_code != 0
+        uses: peter-evans/create-issue-from-file@v5
+        with:
+          title: Link Checker Report
+          content-filepath: ./lychee/out.md
+          labels: report, automated issue
