Milder link check exeptions

--- a/mlc_config.json
+++ b/mlc_config.json
@@ -2,10 +2,10 @@
     "aliveStatusCodes": [0, 40, 200, 401, 403, 418, 500, 503]
   "ignorePatterns": [
     {
-      "pattern": "^https://machinelearningmastery.com/machine-learning-in-r-step-by-step/$"
+      "pattern": "https://machinelearningmastery.com/machine-learning-in-r-step-by-step"
     },
     {
-      "pattern": "^https://python-forum.io/$"
+      "pattern": "https://python-forum.io"
     },
   ]
 }
