Exclude 'evaluations' folder from spellchecking

--- a/.github/workflows/check_spelling.yaml
+++ b/.github/workflows/check_spelling.yaml
@@ -24,7 +24,6 @@ jobs:
 
       - name: Remove folders that do not care about spelling
         run: |
-          rm -rf DevelopmentDesign
-          rm -rf feedback
+          rm -rf evaluations
 
       - uses: igsekor/pyspelling-any@v1.0.4
