Only 'main' results in a published website

--- a/.github/workflows/create_website.yaml
+++ b/.github/workflows/create_website.yaml
@@ -1,7 +1,10 @@
 # Creates the Sphinx website
 name: Create website
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   documentation:
