Standarized CI job names

--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -12,7 +12,7 @@ on:
   pull_request:
 
 jobs:
-  linkChecker:
+  check_links:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
