--- a/.github/workflows/create_website.yaml
+++ b/.github/workflows/create_website.yaml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  documentation:
+  create_website:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.0
