--- a/.github/workflows/create_website.yaml
+++ b/.github/workflows/create_website.yaml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r docs/requirements.txt
 
+      - name: Install sphinx-design, from https://sphinx-design.readthedocs.io/en/latest/get_started.html
+        run: pip install sphinx-design 
+
       - name: remove unused folders
         run: |
           rm -rf docs/julia/not_used
