--- a/.github/workflows/check_rst.yaml
+++ b/.github/workflows/check_rst.yaml
@@ -14,8 +14,8 @@ jobs:
 
       - uses: actions/setup-python@v5
 
-      - name: Install rstcheck
-        run: pip install rstcheck
+      - name: Install rstcheck with Sphinx support
+        run: pip install rstcheck rstcheck[sphinx]
 
       - name: Check docs/python/packages.rst
         run: rstcheck docs/python/packages.rst || true
