--- a/.github/workflows/check_rst.yaml
+++ b/.github/workflows/check_rst.yaml
@@ -19,3 +19,6 @@ jobs:
 
       - name: Check docs/python/packages.rst
         run: rstcheck docs/python/packages.rst || true
+
+      - name: Check docs/python/isolated.rst
+        run: rstcheck docs/python/isolated.rst || true
