--- a/.lycheeignore
+++ b/.lycheeignore
@@ -12,4 +12,4 @@ https://machinelearningmastery.com/machine-learning-in-r-step-by-step
 https://python-forum.io
 https://github.com/UPPMAX/R-python-julia-matlab-HPC/tree/main/exercises/matlab/MatlabExercises.tar.gz
 https://r-forge.r-project.org/
-
+forms.office.com
