.lycheeignore rackham-gui

--- a/.lycheeignore
+++ b/.lycheeignore
@@ -30,3 +30,4 @@ https://se.mathworks.com/help/matlab/index.html.*
 https://se.mathworks.com/help/matlab/add-ons.html
 https://se.mathworks.com/help/matlab/add-ons.html.*
 https://se.mathworks.com/help/matlab/add-ons.html?s_tid=CRUX_lftnavZ 
+rackham-gui.uppmax.uu.se
